@@ -1,3 +1,7 @@
+2010-07-05  Peter Rosin  <peda@lysator.liu.se>
+
+	* tests/export.at [MSVC]: dllimport all imported variables.
+
 2010-07-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 	    Peter Rosin  <peda@lysator.liu.se>
 
